# django_mobile_app_version

./: LICENSE  README.md  setup.cfg
mobile_app_version/: admin.py  apps.py  models.py  urls.py  views.py
mobile_app_version/migrations/: 0001_initial.py
