[metadata]
name = mobile-app-version-sousatg
version = 0.0.1
author = Gil Sousa
author_email = tiagosousafl@gmail.com
description = Django Mobile App Version is a package to add mobile app version service to your API.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sousatg/django_mobile_app_version
project_urls =
    Bug Tracker = https://github.com/sousatg/django_mobile_app_version/issues
license = BSD-2-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires = 
    Django >= 3.2

